# ModernCpp

./: Makefile  README.md
HelloWorld/: helloworld
src/: CMakeLists.txt  auto.cpp  constexpr.cpp  helloworld.cpp  ifswitch.cpp  initializer.cpp  nullptr.cpp  rangefor.cpp
